[package]
name = "bity"
description = "SI prefix, data, packets, data-rate, packet-rate string parser and formater."
categories = ["network-programming", "parsing"]
version = "0.1.1"
edition = "2024"
authors = ["Benjamin Lopez <contact@scotow.com>"]
license = "MIT"
homepage = "https://github.com/scotow/bity"
keywords = ["si", "units", "bit", "byte", "packet"]
readme = "README.md"
repository = "https://github.com/scotow/bity"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
indoc = "2.0.6"
toml = "0.8.20"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]