[package]
name = "bity"
description = "SI prefix, data, packets, data-rate, packet-rate string parser and formater."
categories = ["network-programming", "parsing"]
version = "0.1.4"
edition = "2024"
authors = ["Benjamin Lopez <contact@scotow.com>"]
license = "MIT"
homepage = "https://github.com/scotow/bity"
keywords = ["si", "units", "bit", "byte", "packet"]
readme = "README.md"
repository = "https://github.com/scotow/bity"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
indoc = "2.0.6"
toml = "0.8.20"

[lints.rust]
future_incompatible = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"

[lints.clippy]
all = "warn"
todo = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
mem_forget = "warn"
unused_self = "warn"
filter_map_next = "warn"
needless_continue = "warn"
needless_borrow = "warn"
match_wildcard_for_single_variants = "warn"
if_let_mutex = "warn"
await_holding_lock = "warn"
match_on_vec_items = "warn"
imprecise_flops = "warn"
suboptimal_flops = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
exit = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
option_option = "warn"
verbose_file_reads = "warn"
unnested_or_patterns = "warn"
str_to_string = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]